Added work on C# 0.5.1 interpreter
Updated project with working C# 0.5.1 interpreter, probably will add one or two more interpreters before rigorous checks.

--- a/VisualStudio_IDE/JsonPL/JsonPL/JsonPL.csproj
+++ b/VisualStudio_IDE/JsonPL/JsonPL/JsonPL.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>com.middlemind.JsonPL.JsonPL</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="6.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
