Added work on the C version of the interpreter.
Updated project with the latest C version of the interpreter.

--- a/CodeBlocks_IDE/JsonPL/JsonPL.cbp
+++ b/CodeBlocks_IDE/JsonPL/JsonPL.cbp
@@ -34,6 +34,10 @@
 		<Unit filename="test.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="vgblist.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="vgblist.h" />
 		<Unit filename="vgbstr.c">
 			<Option compilerVar="CC" />
 		</Unit>
