Added work on c interpreter hash functions
Updated project with work on the C interpreter hash functions, binary search, quick sort and pre sort.

--- a/CodeBlocks_IDE/JsonPL/JsonPL.cbp
+++ b/CodeBlocks_IDE/JsonPL/JsonPL.cbp
@@ -50,6 +50,10 @@
 		<Unit filename="vgb_system_function_handler_jpl.h">
 			<Option virtualFolder="com.middlemind.JsonPL/" />
 		</Unit>
+		<Unit filename="vgbhash.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="vgbhash.h" />
 		<Unit filename="vgblist.c">
 			<Option compilerVar="CC" />
 			<Option virtualFolder="com.middlemind.JsonPL/" />
