Updated project with the latest changes to support running test program in the Java and C# versions of the 0.5.1 interpreter.

--- a/VisualStudio_IDE/JsonPL/JsonPL/Properties/launchSettings.json
+++ b/VisualStudio_IDE/JsonPL/JsonPL/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "JsonPL": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "test0.json test"
     }
   }
 }
